# 6-DOF-Robotic-Arm-Hitting-Bell-Task

./: README.md
probot_gazebo/: CMakeLists.txt
probot_gazebo/inc/: cxz_robot_arm.h
probot_gazebo/src/: compute_auxiliary.cpp  compute_inverse_kinematic.cpp  cubic_spline_interpolation.cpp  main_task1.cpp  main_task3.cpp  main_task4.cpp  main_task5.cpp  main_task_ring.cpp  ring_path_generate.cpp  robot_arm.cpp
